--- a/Py/code.ipynb
+++ b/Py/code.ipynb
@@ -13,7 +13,7 @@
     "<div style=\"padding-top: 40px\">\n",
     "<div class=\"alert alert-info\" role=\"alert\" >\n",
     "    <ul>\n",
-    "        <li><b>Nom et Prénom :</b> VotreNom VotrePrénom</li>\n",
+    "        <li><b>Nom et Prénom :</b> CASALOT Romain</li>\n",
     "     </ul>\n",
     "</div>\n",
     "</div>\n",
